--- a/pages/OnePage.html
+++ b/pages/OnePage.html
@@ -16,8 +16,8 @@
 
             <input type="text" placeholder="Search for course" class="search_input">
 
-            <button class="login_btn">Login</button>
-            <button class="Sign_in_btn">Sign in</button>
+            <button class="login_btn"><a href="index.html">Login</a></button>
+            <button class="Sign_in_btn"><a href="index.html">Sign in</a></button>
         </nav>
 
 
@@ -187,10 +187,6 @@
         </ul>
 
         <p class="footer_text">Copyright © MyCourse.io 2024. All Rights Reserved</p>
-
-        <img src="../Photos/twitter_logo.png" alt="" class="twitter_logo">
-        <img src="../Photos/instagram_logo.png" alt="" class="instagram_logo">
-        <img src="../Photos/facebook_logo (1).png" alt="" class="facebook_logo">
     </footer> 
 
 
