--- a/pages/index.html
+++ b/pages/index.html
@@ -19,11 +19,11 @@
         <p class="login_text">Join us and get more benefits. We promise to keep your data safely</p>
 
         <div class="input_container_1">
-            <input type="email" placeholder="Email Address">
+            <input type="email" placeholder="Email Address" id="email_input">
             <img src="../Photos/email_photo.png" alt="">
         </div>
         <div class="input_container_2">
-            <input type="password" placeholder="Password">
+            <input type="password" placeholder="Password" id="password_input">
             <img src="../Photos/Password_photo.png" alt="">
         </div>
         <button class="login_btn"><a href="OnePage.html" class="login_a">Login</a></button>
